--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,15 +1,27 @@
-{{!-- 
-Це код container файлу для index сторінки, 
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- --}}
+<main class="p-5">
+  <div class="card p-5">
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+    <p>HELLO WORLD</p>
+  </div>
+</main>
 
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+<span>test</span>
+<h1>test</h1>
+<div>block</div>
+<div>block</div>
+<div>block</div>
+<div>block</div>
+<div>block</div>
 
-    <button type="button" class="btn btn-primary">Купити</button>
+<div style="margin: 50px 0 100px ; background:red">
+<span>inline</span>
+<span>inline</span>
+<span>inline</span>
+<span class="block">MKJJHinline</span>
 </div>
-
-{{!-- 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
---}}
