--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,5 +1,5 @@
 <main class="p-5">
-  <div class="card p-5">
+  <div class="flex-conteiner">
     <p>HELLO WORLD</p>
     <p>HELLO WORLD</p>
     <p>HELLO WORLD</p>
@@ -20,8 +20,8 @@
 <div>block</div>
 
 <div style="margin: 50px 0 100px ; background:red">
-<span>inline</span>
-<span>inline</span>
-<span>inline</span>
-<span class="block">MKJJHinline</span>
+  <span>inline</span>
+  <span>inline</span>
+  <span>inline</span>
+  <span class="block">MKJJHinline</span>
 </div>
