--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -118,13 +118,68 @@
                         </p>
                         <a href="#" class="icon icon_arrow click feat_link"></a>
                     </div>
-                    <p class="info_title">What you need, when you need it</p>
-                    <p class="info">Spend less time shuffling tabs with a comprehensive message archive and
-                        all your work tools at your fingertips.</p>
+                 
                 </div>
             </div>
         </section>
+
+
     </div>
+<div class="section_feature">
+<h1 class="info_1">What you need, when you need it</h1>
+<p class="info_2">Spend less time shuffling tabs with a comprehensive message archive and
+all your work tools at your fingertips.</p>
+<img src="/img/img-w.png" alt="" class="info_image">  
+
+<section class="card_svg">
+    <span class="svg_1">
+<img src="/img/svg/icon.svg" alt="" class="svg">
+<p>Apps and Integrations</p>
+<section>Streamline work by connecting
+Slack with other services like
+Google Drive, Office 365 and
+over 2,200 more.</section>
+
+<img src="/img/image-5.png" alt="" class="svg">
+
+</span>
+<div class="svg_2">
+<img src="/img/svg/Frame.svg" alt="" class="svg">
+<p>Workflow Builder</p>
+<section>Automate routine actions and
+communication, so you can get
+back to the kind of work only
+humans can do.</section>
+</div>
+<span class="card_svg5">
+<div class="svg_3">
+<img src="/img/svg/icon 1.svg" alt="" class="svg">
+<p>Search</p>
+</div>
+<div class="svg_4">
+<img src="/img/svg/Frame 1.svg" alt="" class="svg">
+<p>File sharing</p>
+</div>
+</div>
+</span>
+</section>
+
+<div class="page_select ">
+<span class="card_customer">
+<section class="png">
+<img src="/img/img-deliveroo.png" alt="" class="svg">
+</section>
+    <p class="text_customer">“The thing that keeps us connected
+the most is Slack. It’s a very
+immediate and straightforward
+method of communication, and
+really the only channel that people
+prefer and enjoy using.”</p>
+<img src="/img/svg/deliveroo.png" alt="" class="">
+<p class="dell">Will Sprunt, CIO, Deliveroo</p>
+</span>
+</div>
+
 
 </body>
 
